# SUPPORT-KNOWLEDGE-CO-PILOT

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile.backend  Dockerfile.frontend  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py  pipeline.py
app/api/: dependencies.py  middleware.py  rate_limit.py  schemas.py
app/feedback/: __init__.py  store.py
app/generation/: generator.py  no_answer.py  prompts.py
app/ingestion/: chunker.py  jobs.py  loaders.py  pipeline.py  service.py
app/llm/: client.py
app/retrieval/: __init__.py  base.py  dense.py  fusion.py  hybrid.py  reranker.py  sparse.py
app/scoring/: confidence.py  schemas.py
app/utils/: logger.py
app/verification/: __init__.py  cache.py  judge.py  prompts.py  schemas.py
data/raw/: api-rate-limits.md  billing-faq.md  sso-login.md  (+4 more)
eval/: __init__.py  evaluate_retrieval.py  golden_set.jsonl  golden_set_schema.py  metrics.py  retrieval_eval_set.jsonl  run_eval.py
frontend/: api_client.py  streamlit_app.py
reports/: eval_summary.md  retrieval_comparison.md
scripts/: benchmark_retrievers.py  build_indexes.py  docker_backend_entrypoint.sh  docker_smoke_test.sh  run_ingestion.py  run_query.py
tests/: __init__.py  test_api.py  test_confidence.py  test_fusion.py  test_generator.py  test_health.py  test_hybrid_retriever.py  test_ingestion.py  test_ingestion_service.py  test_judge.py  test_llm_client.py  test_metrics.py  test_pipeline.py  test_retrieval.py
(+4 files in other folders)
