[project]
name = "support-knowledge-copilot"
version = "0.1.0"
description = "Hybrid RAG support copilot with verified citations and confidence-based no-answer detection."
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = [
    "B008",
    "B905",
    "E402",
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["T201"]
"eval/run_eval.py" = ["T201"]
"eval/evaluate_retrieval.py" = ["T201"]

[tool.black]
line-length = 100
target-version = ["py311"]
